correctly align toggle switch

--- a/css/clean-switch.css
+++ b/css/clean-switch.css
@@ -1,6 +1,12 @@
 #toggles {
   margin-bottom: 10px;
 }
+.toggle {
+  display: flex;
+  justify-content: space-between;
+  max-width: 100%;
+  padding-right: 12px;
+}
 
 /* 
 https://miladd3.github.io/clean-switch/
@@ -53,7 +59,6 @@ MIT License
   font-family: sans-serif;
   font-size: 16px;
   vertical-align: middle;
-  margin: 0 5px;
 }
 .cl-switch input[type="checkbox"]:checked + .switcher {
   background-color: #8591d5;
